--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: yingjiang
-SEOTitle: 樱肖讲思科
+SEOTitle: 樱酱讲思科
 header-img: img/post-bg-desk.jpg
 email: 2330263274@qq.com
 description: "Every failure is leading towards success."
