--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/qiubaiying/qq2330263274.github.io.git" # you co
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/710133.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -59,6 +59,7 @@ kramdown:
 # Disqus（https://disqus.com/）
 # disqus_username: qiubaiying
 
+
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
@@ -99,7 +100,7 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "奋斗的博客",
+        title: "FD的博客",
         href: "http://dornick.top"
 #    },{
 #        title: "简书·BY",
