--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: yingjiang
 SEOTitle: 樱酱
-header-img: img/873441.png
+header-img: img/20180929105928.png
 email: 2330263274@qq.com
 description: "Every failure is leading towards success."
 keyword: ""
