--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,9 @@ header-img: img/20180929105928.png
 email: 2330263274@qq.com
 description: "Every failure is leading towards success."
 keyword: ""
+
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=524149974&auto=1&height=66"></iframe>
+
 url: "http://qq2330263274.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qq2330263274.github.io.git" # you code repository
